# bsm-frontend

./: .gitignore  .pre-commit-config.yaml  README.md  build.sh  pyproject.toml  vercel.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 🐛-report-a-bug.md
.github/workflows/: build-test.yml  publish.yml
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  vite.config.js
frontend/public/: site.webmanifest
frontend/src/: App.jsx  App.test.jsx  AuthContext.jsx  AuthContext.test.jsx  ServerContext.jsx  ThemeContext.jsx  ToastContext.jsx  WebSocketContext.jsx  api.js  api.test.js  index.css  main.jsx
frontend/src/components/: DraggableList.jsx  DynamicPage.jsx  DynamicPage.test.jsx  Footer.css  Footer.jsx  Footer.test.jsx  RemoteConfigModal.jsx  Sidebar.jsx  Sidebar.test.jsx  SidebarLabel.jsx  SidebarLabel.test.jsx
frontend/src/layouts/: Layout.jsx
frontend/src/pages/: AccessControl.jsx  AccessControl.test.jsx  Account.jsx  Account.test.jsx  AuditLog.jsx  AuditLog.test.jsx  BSMSettings.jsx  BSMSettings.test.jsx  Backups.jsx  Backups.test.jsx  Content.jsx  Content.test.jsx  GlobalPlayers.jsx  GlobalPlayers.test.jsx  Login.jsx  Login.test.jsx  Monitor.jsx  Monitor.test.jsx  Overview.jsx  Overview.test.jsx  Playground.jsx  Playground.test.jsx  PluginViewer.jsx  PluginViewer.test.jsx  Plugins.jsx  Plugins.test.jsx  Register.jsx  Register.test.jsx  ServerConfig.jsx  ServerConfig.test.jsx  ServerInstall.jsx  ServerInstall.test.jsx  ServerProperties.jsx  (+5 more)
src/bsm_frontend/: __init__.py
tests/: test_bsm_ui.py
(+27 files in other folders)
